# 5_voinici

./: .gitignore  README.md  manage.py  prepare.bat  prepare.sh  run.bat  run.sh
QuizFeedbackEngine/: .env.example  .replit  README.md  answers_key.json  langgraph_workflow.py  main.py  mock_data.py  models.py  pyproject.toml  replit.md  requirements.txt  topics_by_quiz.json
app-django/voinici/: TEMP.sh  urls.py  views.py  wsgi.py
app-django/voinici/static/css/: quiz.css
app-django/voinici/static/interactives/collision/: collision.html  (+1 more)
app-django/voinici/static/js/: quiz.js
app-django/voinici/static/quiz-data/: collision_quiz.json  inclined_plane_quiz.json  pendulum_quiz.json
app-django/voinici/templates/: base.html  home.html  test_quiz.html
app-django/voinici/templates/experiments/: collision.html  inclined_plane.html  pendulum.html
app-django/voinici/templates/quizes/: pendulum_quiz.html  quiz_page.html
app-django/voinici/templates/theory/: collision.html  inclined_plane.html  pendulum.html
interactives/collision/: collision.html
interactives/inclined_plane/: incline_scene.html  incline_scene.pck
interactives/pendulum/: pendulum.pck
quiz-feedback-engine/: .gitignore  TEMP.sh  langgraph_workflow.py  main.py  models.py  requirements.txt
voinici/: asgi.py  settings.py  urls.py  views.py
voinici/static/css/: home.css  theory.css
voinici/static/js/: home.js  quiz.js
voinici/templates/: base.html  home.html
voinici/templates/quizes/: collision_quiz.html
voinici/templates/theory/: collision.html  inclined_plane.html  pendulum.html
(+4 files in other folders)
